--- a/index.html
+++ b/index.html
@@ -99,17 +99,16 @@
   </nav>
 
   <section class="hero">
-    <h1>Hello, I'm Your Name</h1>
+    <h1>Ceramics and Coatings Research Group at University of Manchester</h1>
     <p>Aspiring web developer & tech enthusiast</p>
     <a href="#projects">View My Work</a>
   </section>
 
   <section class="section" id="about">
-    <h2>About Me</h2>
+    <h2>About Us</h2>
     <div class="card">
       <p>
-        I'm passionate about building web apps, learning new technologies, and solving real-world problems with code. I love working on creative and collaborative projects.
-      </p>
+        Research group based at the Department of Materials, University of Manchester. Our offices are in the Henry Royce Institute, the UK's Advanced Materials Research Network. The research group works on projects including silicon carbide for nuclear applications, TBCs and EBCs.
     </div>
   </section>
 
